--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
   <section class="section" id="contact">
     <h2>Contact</h2>
     <p>Need a hand with your tech? Let’s chat! Book a home consultation or tech support visit — whether it’s fixing an issue, setting up new gear, or just getting advice.</p>
-    <form action="https://formsubmit.co/burlandjordan@gmail.com" method="POST">
+    <form action="https://formsubmit.co/contact@telegraphtech.ca" method="POST">
       <label for="name">Name</label>
       <input type="text" id="name" name="name" required />
 
