--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
   </section>
 
   <footer class="footer">
-    <p>Email: <a href="mailto:contact@telegraphtech.ca">contact@telegraphtech.ca</a></p>
+    <p>Email: <a href="mailto:admin@telegraphtech.ca">admin@telegraphtech.ca</a></p>
     <p>Based in the Comox Valley, BC</p>
     <p>Proudly Canadian</p>
     <p>
