--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="favicon.png" />
   <title>Telegraph Tech</title>
   <!-- Load Afacad font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Afacad&display=swap" rel="stylesheet" />
