--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
           Hi, I’m Jordan—founder of Telegraph Tech. Raised on the North Island, I grew up tinkering with computers, learning through trial, error, and a lot of curiosity. That early curiosity grew into a career in tech support, where I’ve spent years helping people solve problems and get the most out of their devices.
         </p>
         <p>
-          Now based in the Comox Valley, I’ve built Telegraph Tech around the values that matter most to me: honesty, reliability, and genuinely helpful service. I’ve worked with countless happy clients—whether it’s fixing a sluggish computer, setting up a new TV, or giving advice on an upgrade, I’m here to make your tech work for you.
+          Now based in the Comox Valley, I’ve built Telegraph Tech around the values that matter most to me: honesty, reliability, and genuinely helpful service. I’ve worked with countless happy clients! Whether it’s fixing a sluggish computer, setting up a new TV, or giving advice on an upgrade, I’m here to make your tech work for you.
         </p>
-        <p>Tech doesn’t have to be a headache—reach out anytime, and I’ll help you get it sorted.</p>
+        <p>Tech doesn’t have to be a headache. Reach out anytime, and I’ll help you get it sorted.</p>
       </div>
       <div class="about-image">
         <img
-          src="https://images.squarespace-cdn.com/content/v1/6874433aee640f615ed8dcd8/092b8927-9933-4a35-b928-01bd72eedbb7/DSC00371.JPG"
+          src="https://images.squarespace-cdn.com/content/v1/6874433aee640f615ed8dcd8/092b8927-9933-4a35-b928-01bd72eedbb7/DSC00371.JPG"<link rel="icon" type="image/png" href="favicon.png" />
           alt="Telegraph Tech technician"
         />
       </div>
@@ -330,7 +330,7 @@
         width="140"
         height="40"
         src="https://img.pagecloud.com/DShuAXeuku65ALOtBK4BMnSZlEE=/140x0/filters:no_upscale()/made-in-canada-4225/images/button-leaf-red-outline2x.png"
-        alt="button with sugar maple leaf"
+        alt="button with canadian maple leaf"
         loading="lazy"
       />
     </p>
