--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       </div>
       <div class="about-image">
         <img
-          src="https://images.squarespace-cdn.com/content/v1/6874433aee640f615ed8dcd8/092b8927-9933-4a35-b928-01bd72eedbb7/DSC00371.JPG"<link rel="icon" type="image/png" href="favicon.png" />
+          src="https://images.squarespace-cdn.com/content/v1/6874433aee640f615ed8dcd8/092b8927-9933-4a35-b928-01bd72eedbb7/DSC00371.JPG"<link rel="icon" type="image/png" href="favicon.png" 
           alt="Telegraph Tech technician"
         />
       </div>
